docs/.vitepress/theme/style.css
/* ... */
#example {
  --custom-block-background-color: #5e30df08;
  --custom-block-color: #5e30df;
  --custom-block-icon: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path d="M1.75 1h12.5c.966 0 1.75.784 1.75 1.75v8.5A1.75 1.75 0 0 1 14.25 13H8.061l-2.574 2.573A1.458 1.458 0 0 1 3 14.543V13H1.75A1.75 1.75 0 0 1 0 11.25v-8.5C0 1.784.784 1 1.75 1ZM1.5 2.75v8.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h6.5a.25.25 0 0 0 .25-.25v-8.5a.25.25 0 0 0-.25-.25H1.75a.25.25 0 0 0-.25.25Zm5.28 1.72a.75.75 0 0 1 0 1.06L5.31 7l1.47 1.47a.751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018l-2-2a.75.75 0 0 1 0-1.06l2-2a.75.75 0 0 1 1.06 0Zm2.44 0a.75.75 0 0 1 1.06 0l2 2a.75.75 0 0 1 0 1.06l-2 2a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042L10.69 7 9.22 5.53a.75.75 0 0 1 0-1.06Z"></path></svg>');
}

#quote {
  --custom-block-background-color: #88888808;
  --custom-block-color: #888888;
  --custom-block-icon: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path d="M1.75 2.5h10.5a.75.75 0 0 1 0 1.5H1.75a.75.75 0 0 1 0-1.5Zm4 5h8.5a.75.75 0 0 1 0 1.5h-8.5a.75.75 0 0 1 0-1.5Zm0 5h8.5a.75.75 0 0 1 0 1.5h-8.5a.75.75 0 0 1 0-1.5ZM2.5 7.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 1.5 0Z"></path></svg>');
}

/**
 * Component: Custom Containers
 * -------------------------------------------------------------------------- */


.custom-block.info,
.custom-block.note,
.custom-block.tip,
.custom-block.warning,
.custom-block.danger,
.custom-block.details,
.custom-block {
  border-width: 0.1rem 0.1rem 0.1rem 0.25rem;
  border-radius: 0.2rem 0.6rem 0.6rem 0.2rem;
  /* a typical border:
  border-width: 0.1rem;
  border-radius: 0.6rem;
  */
  background-color: var(--custom-block-background-color, var(--vp-c-default-soft));
  border-color: var(--custom-block-color, currentColor);
}

.custom-block.info code,
.custom-block.note code,
.custom-block.tip code,
.custom-block.warning code,
.custom-block.danger code,
.custom-block.details code,
.custom-block code {
  background-color: var(--vp-code-block-bg);
}

.custom-block summary {
  display: block;
}

summary,
.custom-block-title {
  padding-left: 2rem;
  font-weight: 700;
  position: relative;
}

summary::before,
.custom-block-title::before {
  background-color: var(--custom-block-color, currentColor);
  mask-image: var(--custom-block-icon, var(--custom-block-icon--default));
}

summary::before,
.custom-block-title::before {
  mask-repeat: no-repeat;
  mask-position: center;
  mask-size: contain;
  position: absolute;
  content: "";
  height: 1.5rem;
  width: 1.5rem;
  left: 0;
}

summary::after {
  background-color: currentColor;
  content: "";
  height: 1.5rem;
  width: 1.5rem;
  mask-image: var(--custom-block-summary-icon);
  mask-repeat: no-repeat;
  mask-position: center;
  mask-size: contain;
  position: absolute;
  background-color: var(--custom-block-color, var(--vp-c-text-1));
  transform: rotate(180deg);
  transition: transform .25s;
  right: 0;
}

details[open]>summary::after {
  transform: rotate(90deg);
}

#app .Layout #VPContent .VPHome .VPHero .container .main .text {
  font-size: 52px;
}

